--- a/Basic_C#_Programs/MVCTutorial/MVCTutorial/Views/Home/Index.cshtml
+++ b/Basic_C#_Programs/MVCTutorial/MVCTutorial/Views/Home/Index.cshtml
@@ -1,9 +1,14 @@
-﻿@{
+﻿@model MVCTutorial.Models.User
+
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1>@Model.ID</h1>
+    <h1>@Model.FirstName</h1>
+    <h1>@Model.LastName</h1>
+    <h1>@Model.Age</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
