--- a/Basic_C#_Programs/CarInsurance/CarInsurance/Views/Insuree/Index.cshtml
+++ b/Basic_C#_Programs/CarInsurance/CarInsurance/Views/Insuree/Index.cshtml
@@ -79,7 +79,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.CoverageType)
         </td>
-        <td>
+        <td class="hidden">
             @Html.DisplayFor(modelItem => item.Quote)
         </td>
         <td>
